# melanoma-classification

./: .gitignore  README.md  app.py  colab_runner.ipynb  improvements.md  keep_alive.py  main.py  plan.md  pyproject.toml  pyrightconfig.json  requirements.txt
ppt/: presentation.html
report/: IEEE-conference-template-062824.tex
report/md/: 01_abstract.md  02_introduction.md  03_literature_review.md  04_methodology.md  05_experiments.md  06_conclusion_future_work.md
src/: README.md  app.py  config.py  dataset.py  evaluate.py  file_io_manager.py  requirements.txt  train.py
src/base/b0_1/: metrics
src/base/dens_1/: metrics
src/base/res50_1/: metrics
src/dataset/: __init__.py  data_loaders.py  melanoma_dataset.py  metadata_preprocessor.py  transform.py  transforms.py
src/model/: __init__.py  metadata_melanoma_model.py  model.py
viva/: 01_dataset_preprocessing.md  02_architecture.md  03_focal_loss_imbalance.md  04_experiments.md  05_optimizers_schedulers.md  06_evaluation_metrics.md  07_metadata_shap.md  08_ood_detection.md  09_eigencam_interpretability.md  10_error_analysis.md  11_literature_context.md  index.md
